--- a/dolci-d-incanto-app/index.html
+++ b/dolci-d-incanto-app/index.html
@@ -1,10 +1,13 @@
 <!doctype html>
-<html lang="en">
+<html lang="it">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="svg" href="/dolci-d-incanto-app/src/assets/Icon/cake_dessert_love_party_sweet_topper_wedding_icon_146719.svg" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Afacad:ital,wght@0,400..700;1,400..700" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Dolci d'Incanto</title>
   </head>
   <body>
     <div id="root"></div>
